Added app.js and modified module5.html

--- a/module5.html
+++ b/module5.html
@@ -7,10 +7,19 @@
      </script>
 </head>
 <body>
-<button onclick="add()">Sophia Amabelle Laroco </button>
-<button onclick="add()">Elisha Julia Laurel</button>
-<button onclick="add()">John Henry Mariano </button>
-<button onclick="add()">Carmela Denise Simon </button>
+     <center>
+<h1>HOME PAGE</h1>>
 
+<a href="mariano.html">Mariano</a>
+<br>
+<br>
+<a href="laurel.html">Laurel</a>
+<br>
+<br>
+<a href="laroco.html">Laroco</a>
+<br>
+<br>
+<a href="simon.html">Simon</a>
+     </center>
 </body>
 </html>
